# mcp-server-yandex-metrika

./: .gitignore  CLAUDE.md  README.md  development.md  pyproject.toml  server.json
mcp-server-yandex-metrika/: README.md  maintainer.md
mcp-server-yandex-metrika/.github/workflows/: test.yml
mcp-server-yandex-metrika/src/mcp_server_yandex_metrika/: cli.py  models.py  server.py
mcp-server-yandex-metrika/tests/: conftest.py  test_mcp_counters.py  test_mcp_goals.py  test_mcp_management.py  test_mcp_misc.py  test_mcp_reports.py
src/mcp_server_yandex_metrika/: __init__.py  __main__.py  actions.py  cli.py  metrika_api.py  models.py  server.py
tests/: conftest.py  test_mcp_counters.py  test_mcp_goals.py  test_mcp_logs.py  test_mcp_management.py  test_mcp_misc.py  test_mcp_reports.py
