[project]
name = "mcp-server-yandex-metrika"
version = "0.1.1"
description = "MCP server for Yandex Metrika API — counters, goals, reports, segments, logs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.scripts]
mcp-server-yandex-metrika = "mcp_server_yandex_metrika:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_yandex_metrika"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
